@@ -17,6 +17,7 @@ import com.google.common.util.concurrent.ListenableFuture;
 import com.google.inject.Inject;
 import io.trino.Session;
 import io.trino.execution.warnings.WarningCollector;
+import io.trino.metadata.Canonicalizer;
 import io.trino.metadata.Metadata;
 import io.trino.metadata.QualifiedObjectName;
 import io.trino.metadata.RedirectionAwareTableHandle;
@@ -73,7 +74,7 @@ public class DropColumnTask
             WarningCollector warningCollector)
     {
         Session session = stateMachine.getSession();
-        QualifiedObjectName tableName = createQualifiedObjectName(session, statement, statement.getTable());
+        QualifiedObjectName tableName = createQualifiedObjectName(session, statement, statement.getTable(), metadata);
         RedirectionAwareTableHandle redirectionAwareTableHandle = metadata.getRedirectionAwareTableHandle(session, tableName);
         if (redirectionAwareTableHandle.tableHandle().isEmpty()) {
             if (!statement.isTableExists()) {
@@ -83,21 +84,22 @@ public class DropColumnTask
         }
         TableHandle tableHandle = redirectionAwareTableHandle.tableHandle().get();
 
-        // Use getParts method because the column name should be lowercase
-        String column = statement.getField().getParts().get(0);
+        // Use getCanonicalizedValue method because the columnName should be canonicalized
+        Canonicalizer canonicalizer = metadata.getCanonicalizer(session, tableName.catalogName());
+        String columnName = statement.getField().canonicalizeColumn(canonicalizer::canonicalizeColumn).getOriginalParts().getFirst().getCanonicalizedValue();
 
         QualifiedObjectName qualifiedTableName = redirectionAwareTableHandle.redirectedTableName().orElse(tableName);
         accessControl.checkCanDropColumn(session.toSecurityContext(), qualifiedTableName);
 
-        ColumnHandle columnHandle = metadata.getColumnHandles(session, tableHandle).get(column);
+        ColumnHandle columnHandle = metadata.getColumnHandles(session, tableHandle).get(columnName);
         if (columnHandle == null) {
             if (!statement.isColumnExists()) {
-                throw semanticException(COLUMN_NOT_FOUND, statement, "Column '%s' does not exist", column);
+                throw semanticException(COLUMN_NOT_FOUND, statement, "Column '%s' does not exist", columnName);
             }
             return immediateVoidFuture();
         }
 
-        // Use getOriginalParts method because field names in row types are case-sensitive
+        // Use getValue method because field names in row types are case-sensitive
         List<String> fieldPath = statement.getField().getOriginalParts().subList(1, statement.getField().getOriginalParts().size()).stream()
                 .map(Identifier::getValue)
                 .collect(toImmutableList());
